# stellar-suite

./: .gitignore  .vscodeignore  BUILD.md  CHANGELOG.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_CHECKLIST.md  INTEGRATION_TESTS_README.md  LICENSE.md  MARKETPLACE.md  README.md  SIMULATION_INTEGRATION_TESTS_SUMMARY.md  STATUS_BADGES_IMPLEMENTATION.md  STATUS_BADGES_INTEGRATION.md  package-lock.json  package.json  pr.md  test_output.txt  tsconfig.json  typedoc.json
.github/workflows/: docs.yml  frontend.yml  rpc-integration-tests.yml  test.yml
.nyc_output/: 4781014a-4a29-4888-b2ac-e57d3daa58b9.json
.nyc_output/processinfo/: 3c06b4e2-4093-44f0-b175-a9e29db67be0.json  4781014a-4a29-4888-b2ac-e57d3daa58b9.json  69e7e685-72f5-43f8-a2d7-501e07a54a51.json  ebc4efbc-63a0-4a5e-8e3c-c72fa5eecca4.json  index.json
assets/banners/: GUIDELINES.md  README.md
docs/: RPC_INTEGRATION_TESTS.md  badge-integration-examples.md  branding.md  contract-management-README.md  contract-management-examples.md  contract-management.md  contract-metadata-extraction.md  contract-version-tracking.md  dependency-detection.md  deployment-workflow-integration-testing.md  form-validation.md  getting-started.md  icon-guidelines.md  performance-ci-cd-integration.md  performance-testing-quickstart.md  performance-testing.md  simulation-features.md  status-badges.md  toast-notification-system.md  ui-integration-testing.md  workspace-organization.md
docs/api/: hierarchy.html  index.html
docs/screenshots/: README.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CommentSection.tsx  ContactDialog.tsx  ContactForm.tsx  FeedbackWidget.tsx  Navbar.tsx  NewsletterForm.tsx  SocialShareButtons.tsx  WebVitals.tsx  hero.tsx
out-test/services/: batchDeploymentService.js  cliValidationService.js  contextMenuService.js  contractDeployer.js  contractVersionTracker.js  (+10 more)
scripts/: setup-vscode-mock.js  test-templates.js
src/: extension.ts
templates/: .gitignore  README.md
templates/auction/: Cargo.toml
templates/auction/docs/: AUCTION_TESTS.md
templates/auction/tests/: test.rs
templates/example/: Cargo.toml  README.md  template.json
templates/example/src/: lib.rs
templates/example/tests/: test.rs
templates/multisig/: Cargo.toml  README.md  TESTING.md  template.json
templates/multisig/src/: lib.rs
templates/multisig/test_snapshots/: test_approve_proposal.1.json  test_create_proposal.1.json  test_double_approval_fails.1.json  test_double_initialize_fails.1.json  test_duplicate_signers_fails.1.json  test_empty_signers_fails.1.json  test_execute_already_executed_fails.1.json  test_execute_below_threshold_fails.1.json  test_get_nonexistent_proposal_fails.1.json  test_get_signers_before_init_fails.1.json  test_get_threshold_before_init_fails.1.json  test_initialize_1_of_1.1.json  test_initialize_2_of_3.1.json  test_non_signer_cannot_approve.1.json  test_non_signer_cannot_execute.1.json  test_non_signer_cannot_propose.1.json  test_proposal_count_increments.1.json  test_revoke_approval.1.json  test_revoke_without_approval_fails.1.json  test_threshold_exceeds_signers_fails.1.json  test_threshold_zero_fails.1.json  test_update_signers_via_proposal.1.json
templates/multisig/tests/: test.rs
templates/nft/: Cargo.toml  README.md  TESTING.md  build_error.txt  template.json  test_out.txt
templates/nft/src/: lib.rs
templates/nft/tests/: test.rs
templates/staking/: Cargo.toml  README.md  template.json
templates/staking/src/: lib.rs
templates/staking/test_snapshots/: test_admin_update_rate.1.json  test_initialization.1.json  test_large_values_no_overflow.1.json  test_multi_user_distribution.1.json  test_pause_staking.1.json  test_stake_zero_fail.1.json  test_staking_and_rewards.1.json  test_successive_staking_lock_extension.1.json  test_unstake_locked_fail.1.json  test_unstake_partial_and_full.1.json
templates/staking/tests/: test.rs
(+426 files in other folders)
