[package]
name = "auction-contract"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Suite"]
description = "Comprehensive auction contract template for Soroban with bidding and time-based closing."
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "auction_contract"

[dependencies]
soroban-sdk = { version = "22.0.9", features = [] }

[dev-dependencies]
soroban-sdk = { version = "22.0.9", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
