[package]
# CONTRACT DETAILS: Replace "example-contract" with your contract crate name.
name = "example-contract"
version = "0.1.0"
edition = "2021"
# CONTRACT DETAILS: Replace with your name or organization.
authors = ["CONTRACT AUTHOR"]
# CONTRACT DETAILS: Replace with a one-line description.
description = "Example contract template placeholder — replace with real description."
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
# CONTRACT DETAILS: Replace "example_contract" with your library module name.
name = "example_contract"

[dependencies]
# CONTRACT DETAILS: Add your Soroban SDK and other required dependencies here.
soroban-sdk = { version = "20.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
