[package]
name = "staking-contract"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Suite"]
description = "Production-ready staking contract template for Soroban."
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "staking_contract"

[dependencies]
soroban-sdk = { version = "20.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
